# stereo_libtorch_inference

./: .gitignore  CMakeLists.txt  CalibParams_Stereo.yml  Camera.cpp  Camera.h  InferClient.cpp  InferClient.h  README.md  ROS_Input.cpp  ROS_Input.h  camera.cpp  camera.h  camera_info_left_ros.yaml  camera_info_right_ros.yaml  camera_info_test.yaml  imgInfer.cpp  imgInfer.h  main.cpp  main_ros.cpp  main_ros_depth.cpp
dcn_cpp_plugin/: README.md  dcn_v2_cuda.cu
utils/: utils.cpp  utils.h
